--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
  I am Haocong Rao (饶浩聪), a final-year PhD candidate supported by
    <a href="https://aisingapore.org/research/phd-fellowship-programme/">AI Singapore (AISG) PhD Fellowship</a> and supervised by <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Prof. Chunyan Miao</a> and <a href="https://ece.ubc.ca/cyril-leung/">Prof. Cyril Leung</a>,
     at the <a href="https://www.ntu.edu.sg/lily">LILY Research Centre</a> and College of Computing and Data Science (CCDS), Nanyang Technological University (NTU), Singapore.
-    My research interests include General Pattern Recognition, Skeleton-Based Person Re-Identification (SRID), Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, LLMs Application, AI for Healthcare).
+    My research interests include Skeleton-Based Person Re-Identification (SRID), 3D Signal Processing, Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, LLMs Application, AI for Healthcare).
 </p>
 
 <p>
