--- a/index.html
+++ b/index.html
@@ -625,15 +625,12 @@
           <h2>Personal Interests</h2>
           <div style="line-height:25px">
           <p></p>
-              <strong>Running and Gymming</strong>: I enjoy running and often participate in 10km+ level races including Singapore Marathon 2023.
-              I regularly go to gym for working out.
+              <strong>Running and Working Out</strong>: I enjoy running and often participate in 10km+ level races including Singapore Marathon 2023.
+              I regularly work out in the gym.
               <br>
-               <strong>Military Chess (A Chinese cooperative and tactical game)</strong>：My most playing chess game during my high school. I got the level of
-              deputy brigade commander with about 1000 score.
+               <strong>Military Chess (A Chinese cooperative and tactical game)</strong>：My most playing chess game during my high school.
               <br>
-              <strong>Billiards</strong>: I like playing billiards and have participated in some inter-university competitions.
-              <br>
-              <strong>Archery, Rock Climbing, Texas Hold'em</strong>
+              <strong>Billiards, Archery, Rock Climbing, Texas Hold'em</strong>
               <p></p>
           </li></div>
         </td>
