--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <img class="intro-image no-print" src="./images/me.png" width="240" height="280" alt="Picture of me.">
 <section id="wenjie-yin" class="intro-text">
 <h1>Haocong Rao</h1>
-    <p><strong>PhD Candidate, AI Singapore (AISG) PhD Fellow</strong></p>
+    <p><strong>PhD Candidate, AISG PhD Fellow</strong></p>
     <p><strong>LILY Research Centre, Nanyang Technological University</strong></p>
 
 <div class="intro-contact">
