--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI </em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is selected as <em><strong style="color: red;">Featured Article (2022 October Issue) of TPAMI</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Recognized as <strong>Top Reviewer (3%)</strong> and <strong>Distinguished Program Committee (PC) Member</strong> of <em>IJCAI! </em> </smalll><br></li>
           <li> <strongsmall>[2022/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IJCAI 2022 (Oral)</em>!</smalll><br></li>
-            <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <em><strong style="color: red;">AI Singapore (AISG) Phd Fellowship</strong> (Top PhD Scholarship in Singapore)</em>!</smalll><br></li>
+            <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <em><strong style="color: red;">AI Singapore (AISG) PhD Fellowship</strong> (Top PhD Scholarship in Singapore)</em>!</smalll><br></li>
             <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Transactions on Multimedia (TMM) [IF: 8.2]</em>!</smalll><br></li>
           <li> <strongsmall>[2021/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>ACMMM 2021</em>!</smalll><br></li>
             <li> <strongsmall>[2021/06]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) [IF: 24.3]</em>!</smalll><br></li>
