--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 	 <em>Arxiv Preprint</em><br>
      <a href="https://arxiv.org/abs/2405.13082">[Link]</a>
-          <a href="https://drive.google.com/file/d/10tzzFQoKDkiRKKMaPrYWxnwG3G90UXNo/view?usp=drive_link">[PDF]</a>
+          <a href="https://arxiv.org/pdf/2405.13082">[PDF]</a>
      <a href="https://github.com/Kali-Hac/AI4NDD-Survey">[Resources]</a>
 <!--      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:pyQiJYbu3PgJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGam3o:AFWwaeYAAAAAZmGcg3p1n0naJ3OA-ZyEzQ3rhZc&scisig=AFWwaeYAAAAAZmGcgwd3gxarwEQ8c5xugpkq5jY&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
         <p></p>
@@ -194,8 +194,8 @@
        <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
 
           <em>Arxiv Preprint</em><font color="#6495ed"> [First SRID Survey]</font><br>
-     <a href="https://arxiv.org/pdf/2401.15296">[Link]</a>
-           <a href="https://drive.google.com/file/d/1qJJCj1utCnP3p-4mvGQp3cn2a7uljaPE/view?usp=drive_link">[PDF]</a>
+     <a href="https://arxiv.org/abs/2401.15296">[Link]</a>
+           <a href="https://arxiv.org/pdf/2401.15296">[PDF]</a>
      <a href="https://github.com/Kali-Hac/3D-skeleton-based-person-re-ID-survey">[Resources]</a>
 <!--      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:B-L8WFJb_b8J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGaquw:AFWwaeYAAAAAZmGcsuztIpWW1VDG8RiO_e3jOmE&scisig=AFWwaeYAAAAAZmGcsmOdDqGpNho4lBC1twerYq0&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
         <p></p>
