--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
 <h2 id="about-me">About me</h2>
 <p>
  I am Haocong Rao (饶浩聪), a final-year PhD candidate supported by
-   <a href="https://aisingapore.org/research/phd-fellowship-programme/">AI Singapore (AISG) PhD Fellowship</a> and supervised by <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Prof. Chunyan Miao</a> and <a href="https://ece.ubc.ca/cyril-leung/">Prof. Cyril Leung</a>,
+   <a href="https://aisingapore.org/research/phd-fellowship-programme/">AI Singapore (AISG) PhD Fellowship</a> and supervised by <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Prof. Chunyan</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/">Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>),
     at the <a href="https://www.ntu.edu.sg/lily">LILY Research Centre</a> and College of Computing and Data Science (CCDS), Nanyang Technological University (NTU), Singapore.
     My broad research interests include Skeleton-Based Person Re-Identification (SRID), 3D Signal Processing, Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, LLMs Application, AI for Healthcare).
 </p>
 
 <p>
       Prior to joining NTU, I was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science,
-      where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm">Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm">Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN">Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/">Prof. Victor C.M. Leung</a>.
+      where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm">Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm">Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN">Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/">Prof. Victor C.M. Leung</a> (<em>FIEEE, FRSC, FEIC, FCAE</em>).
       I obtained my B.Eng. degree with Outstanding Thesis Award from South China University of Technology (SCUT).
 </p>
 <!--      <em><stronghuge><font color="#a82e2e">I am on the 2024-2025 academic job market. </font></stronghuge></em> <br>-->
