--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </td>
       <td valign="top" width="75%">
       <strong>A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis</strong><br>
-       By <strong>Haocong Rao</a></strong>,
+       By <strong><u>Haocong Rao</a></u></strong>,
        <a href="">Minlin Zeng</a>,
           <a href="https://scholar.google.com/citations?user=gcXa1o8AAAAJ&hl=en">Xuejiao Zhao</a>,
        <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
@@ -190,7 +190,7 @@
       </td>
       <td valign="top" width="75%">
       <strong>A Survey on 3D Skeleton Based Person Re-Identification: Approaches, Designs, Challenges, and Future Directions</strong><br>
-       By <strong>Haocong Rao</a></strong>,
+       By <strong><u>Haocong Rao</a></u></strong>,
        <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
 
           <em>Arxiv Preprint</em><font color="#6495ed"> [First SRID Survey]</font><br>
@@ -210,7 +210,7 @@
       </td>
       <td valign="top" width="75%">
       <strong>Hierarchical Skeleton Meta-Prototype Contrastive Learning with Hard Skeleton Mining for Unsupervised Person Re-Identification</strong><br>
-       By <strong>Haocong Rao</strong>,
+       By <strong><u>Haocong Rao</u></strong>,
            <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Cyril Leung</a>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
           <em>International Journal of Computer Vision (<strong>IJCV</strong>) 2023 [IF: 19.5]</em> <font color="#6495ed">[First SRID Article in IJCV]</font><br>
@@ -232,7 +232,7 @@
       </td>
       <td valign="top" width="75%">
       <strong>Can ChatGPT Assess Human Personalities? A General Evaluation Framework</strong><br>
-      By <strong>Haocong Rao</strong>,
+      By <strong><u>Haocong Rao</u></strong>,
            <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Cyril Leung</a>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
      <em>2023 Conference on Empirical Methods in Natural Language Processing,<strong> EMNLP 2023</strong> (Findings)</em><br>
@@ -252,7 +252,7 @@
       </td>
       <td valign="top" width="75%">
 	 <strong>TranSG: Transformer-Based Skeleton Graph Prototype Contrastive Learning with Structure-Trajectory Prompted Reconstruction for Person Re-Identification</strong><br>
-	 By <strong>Haocong Rao</strong>,
+	 By <strong><u>Haocong Rao</u></strong>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
      <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition, <strong>CVPR 2023</strong></em> <font color="#6495ed">[First SRID Paper in CVPR]</font><br>
 		<a href="http://openaccess.thecvf.com/content/CVPR2023/papers/Rao_TranSG_Transformer-Based_Skeleton_Graph_Prototype_Contrastive_Learning_With_Structure-Trajectory_Prompted_CVPR_2023_paper.pdf">[Link]</a>
@@ -273,7 +273,7 @@
       </td>
       <td valign="top" width="75%">
           <strong>Revisiting <em>k</em>-Reciprocal Distance Re-ranking for Skeleton-Based Person Re-Identification</strong><br>
-	 By <strong>Haocong Rao</strong>,
+	 By <strong><u>Haocong Rao</u></strong>,
           Yuan Li,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
      <em>IEEE Signal Processing Letters 2022 [IF: 3.9]</em><br>
@@ -293,7 +293,7 @@
       </td>
       <td valign="top" width="75%">
 	 <strong>SimMC: Simple Masked Contrastive Learning of Skeleton Representations for Unsupervised Person Re-Identification</strong><br>
-	By <strong>Haocong Rao</strong>,
+	By <strong><u>Haocong Rao</u></strong>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
           <em>31st International Joint Conference on Artificial Intelligence, <strong>IJCAI 2022 <font color="red">(Oral, Acceptance Rate: 14.9%)</font></strong></em><br>
 		<a href="https://www.ijcai.org/proceedings/2022/0180.pdf">[Link]</a>
@@ -314,7 +314,7 @@
       </td>
       <td valign="top" width="75%">
 	 <strong>Skeleton Prototype Contrastive Learning with Multi-Level Graph Relation Modeling for Unsupervised Person Re-Identification</strong><br>
-	By <strong>Haocong Rao</strong>,
+	By <strong><u>Haocong Rao</u></strong>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
      <em><strong>Arxiv Preprint (Extension of IJCAI 2021 Paper)</strong></em><br>
 		<a href="https://arxiv.org/pdf/2208.11814">[Link]</a>
@@ -336,7 +336,7 @@
       </td>
       <td valign="top" width="75%">
 	 <strong>SM-SGE: A Self-Supervised Multi-Scale Skeleton Graph Encoding Framework for Person Re-Identification</strong><br>
-	 By <strong>Haocong Rao</strong>, Xiping Hu, Jun Cheng, Bin Hu <br>
+	 By <strong><u>Haocong Rao</u></strong>, Xiping Hu, Jun Cheng, Bin Hu <br>
      <em>29th ACM International Conference on Multimedia, <strong>ACMMM 2021</strong></em> <font color="#6495ed">[First SRID Paper in ACMMM]</font><br>
 		<a href="https://arxiv.org/abs/2107.01903">[Link]</a>
           <a href="https://drive.google.com/file/d/1Tk4Ww3I3F7Zn0SVIemVE_0z4BjdyqcCl/view?usp=drive_link">[PDF]</a>
@@ -356,7 +356,7 @@
       </td>
       <td valign="top" width="75%">
 	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
-	 By <strong>Haocong Rao*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
+	 By <strong><u>Haocong Rao</u>*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
      <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 [IF: 24.3] (Extension of IJCAI 2020 Paper)
      </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Article, ESI Highly Cited Paper)</font></strong></EM><br>
 		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
@@ -377,7 +377,7 @@
       </td>
       <td valign="top" width="75%">
 	 <strong>Multi-level Graph Encoding with Structural-Collaborative Relation Learning for Skeleton-Based Person Re-Identification</strong><br>
-	 By <strong>Haocong Rao</strong>, Shihao Xu, Xiping Hu, Jun Cheng, Bin Hu <br>
+	 By <strong><u>Haocong Rao</u></strong>, Shihao Xu, Xiping Hu, Jun Cheng, Bin Hu <br>
      <em>30th International Joint Conference on Artificial Intelligence, <strong>IJCAI 2021 <font color="red">(Oral, Acceptance Rate: 13.9%)</font></strong></em><br>
 		<a href="https://www.ijcai.org/proceedings/2021/0135.pdf">[Link]</a>
           <a href="https://drive.google.com/file/d/1G99sJ2Ykua-DyG1liMzeZ6M7_juPhAM_/view?usp=drive_link">[PDF]</a>
@@ -397,7 +397,7 @@
       </td>
       <td valign="top" width="75%">
 	 <strong>Augmented Skeleton Based Contrastive Action Learning with Momentum LSTM for Unsupervised Action Recognition</strong><br>
-	 By <strong>Haocong Rao*</strong>, Shihao Xu*, Xiping Hu, Jun Cheng, Bin Hu (* Co-First Author)<br>
+	 By <strong><u>Haocong Rao</u>*</strong>, Shihao Xu*, Xiping Hu, Jun Cheng, Bin Hu (* Co-First Author)<br>
      <em>Information Sciences 2021 [IF: 8.5]</em><br>
 		<a href="https://www.sciencedirect.com/science/article/pii/S0020025521003443">[Link]</a>
           <a href="https://drive.google.com/file/d/1qsfh3YZfZM7D7r8oyOObP4P54T4EAYFw/view?usp=drive_link">[PDF]</a>
@@ -417,7 +417,7 @@
       </td>
       <td valign="top" width="75%">
 	 <strong>Internet of Things Enabled Data Fusion Method for Sleep Healthcare Applications</strong><br>
-	 By Fan Yang, Qilu Wu, Xiping Hu, Jiancong Ye, Yuting Yang, <strong>Haocong Rao</strong>, Rong Ma, Bin Hu<br>
+	 By Fan Yang, Qilu Wu, Xiping Hu, Jiancong Ye, Yuting Yang, <strong><u>Haocong Rao</u></strong>, Rong Ma, Bin Hu<br>
      <em>IEEE Internet of Things Journal (<strong>IoTJ</strong>) 2021 [IF: 10.2]</em><br>
 		<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9383097">[Link]</a>
           <a href="https://drive.google.com/file/d/12QnHN_MjsBUZL7vjleEp7VGZT7fer4T8/view?usp=drive_link">[PDF]</a>
@@ -435,7 +435,7 @@
       </td>
       <td valign="top" width="75%">
 	 <strong>Prototypical Contrast and Reverse Prediction: Unsupervised Skeleton Based Action Recognition</strong><br>
-	 By Shihao Xu, <strong>Haocong Rao</strong>, Xiping Hu, Jun Cheng, Bin Hu<br>
+	 By Shihao Xu, <strong><u>Haocong Rao</u></strong>, Xiping Hu, Jun Cheng, Bin Hu<br>
      <em>IEEE Transactions on Multimedia (<strong>TMM</strong>) 2021 [IF: 8.2]</em><br>
 		<a href="https://ieeexplore.ieee.org/abstract/document/9623511">[Link]</a>
            <a href="https://drive.google.com/file/d/1TFzmIZUdEAhbe3n2bJImqevpNtr4oCJr/view?usp=drive_link">[PDF]</a>
@@ -457,7 +457,7 @@
       </td>
       <td valign="top" width="75%">
       <strong>Attention based Multi-level Co-occurrence Graph Convolutional LSTM for 3D Action Recognition</strong><br>
-         By Shihao Xu*, <strong>Haocong Rao*</strong>, Xiping Hu, Jun Cheng, Bin Hu (* Co-First Author)<br>
+         By Shihao Xu*, <strong><u>Haocong Rao</u>*</strong>, Xiping Hu, Jun Cheng, Bin Hu (* Co-First Author)<br>
      <em>IEEE Internet of Things Journal (<strong>IoTJ</strong>) 2020 [IF: 9.5]</em><br>
      <a href="https://ieeexplore.ieee.org/document/9286840">[Link]</a>
            <a href="https://drive.google.com/file/d/1vXN97PlH9EdcDh011wKSDyqdm2dndfur/view?usp=drive_link">[PDF]</a>
@@ -475,7 +475,7 @@
       </td>
       <td valign="top" width="75%">
       <strong>Self-Supervised Gait Encoding with Locality-Aware Attention for Person Re-Identification</strong><br>
-          By <strong>Haocong Rao*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Huang Da, Jun Cheng, Bin Hu. (* Co-First Author)<br>
+          By <strong><u>Haocong Rao</u>*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Huang Da, Jun Cheng, Bin Hu. (* Co-First Author)<br>
      <em>29th International Joint Conference on Artificial Intelligence, <strong>IJCAI 2020 <font color="red">(Oral, Acceptance Rate: 12.6%)</font></strong></em> <font color="#6495ed">[First SRID Paper in IJCAI]</font><br>
      <a href="https://www.ijcai.org/proceedings/2020/0125.pdf">[Link]</a>
           <a href="https://drive.google.com/file/d/1UIrGrGgiXYv_cGesqwijzydUI-iJBTcG/view?usp=drive_link">[PDF]</a>
@@ -547,18 +547,21 @@
 </tbody>
 
 
-<!-- <tbody><tr>-->
-<!--        <td width="100%" valign="middle">-->
-<!--          <h2>Invited Talks and Presentations</h2>-->
-<!--          <div style="line-height:25px">-->
-<!--          <p></p>-->
-<!--                            <li> <stronghuge><STRONG>"Skeleton Prototype Contrastive Learning with Multi-Level Graph Relation Modeling for Unsupervised Person Re-Identification"</STRONG>, Invited Oral Presentation by International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, China, 2023</stronghuge><br></li>-->
-<!--              <li> <stronghuge><STRONG>"Insights from My Research"</STRONG>, Invited Talk by iMED & CSE of Southern University of Science and Technology (SUSTech), China, 2021</stronghuge><br></li>-->
-<!--              <p></p>-->
-<!--          </li></div>-->
-<!--        </td>-->
-<!--      </tr>-->
-<!--</tbody>-->
+<tbody><tr>
+        <td width="100%" valign="middle">
+          <h2>Invited Talks and Presentations</h2>
+          <div style="line-height:25px">
+          <p></p>
+          <li> <stronghuge><STRONG>"Global Young Scholars' Forum"</STRONG>, Invited Presentation by <EM>Double First-Classs & Project 985 Universities</EM>, China, 2024 <br></li>
+            <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/">the National AI Stragtegy 2.0</a>"</STRONG>, Invited Discussion by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore, 2024 <br></li>
+              <li> <stronghuge><STRONG>"Skeleton Prototype Contrastive Learning with Multi-Level Graph Relation Modeling for Unsupervised Person Re-Identification"</STRONG>, 
+                              Invited Presentation by <EM>International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</EM>, 2023</stronghuge><br></li>
+              <li> <stronghuge><STRONG>"Insights from Top-Conference Research"</STRONG>, Invited Talk by <EM>Southern University of Science and Technology (SUSTech, iMED) </EM>, China, 2021</stronghuge><br></li>
+              <p></p>
+          </li></div>
+        </td>
+      </tr>
+</tbody>
 
 
 
@@ -577,7 +580,7 @@
         <img src="./images/SCSE_GSC_LOGO.png" width="200" height="200">
       </td>
       <td valign="top" width="75%">
-          <stronghuge><STRONG>NTU CCDS (SCSE) Graduate Student Club (2022 - Present)</STRONG></stronghuge> <br>
+          <stronghuge><STRONG>NTU CCDS (SCSE) Graduate Student Club (2022 - 2024)</STRONG></stronghuge> <br>
         <huge><em>Director of Publicity Committee & Member of Academic Committee</em></huge><br>
         <p></p>
         <p></p>
@@ -593,7 +596,7 @@
 <!--          </ul>-->
            <li> Manage and promote CCDS (SCSE) social media publicity (<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos/">Youtube (@SCSE-GSC)</a>,
           <a href="https://www.instagram.com/ntu.scse.gsc/">Instagram (@ntu.scse.gsc)</a>, <a href="https://x.com/SCSE_GSC">Twitter (@SCSE_GSC)</a>, Wechat (@NTU SCSE PhD), <EM>etc</EM>.),
-          which has linked and served more than 270 NTU CCDS (SCSE) PhDs. <br></li>
+          which has linked and served more than 320 NTU CCDS (SCSE) PhDs. <br></li>
         <p></p>
       </li></td>
     </tr>
@@ -607,7 +610,7 @@
         <img src="./images/SCUT_SSE.jpg" width="200" height="140">
       </td>
       <td valign="top" width="75%">
-          <stronghuge><STRONG>SCUT SSE Student Union</STRONG></stronghuge> <br>
+          <stronghuge><STRONG>SCUT SSE Student Union (2015 - 2018)</STRONG></stronghuge> <br>
         <huge><em>Director of Information & News Committee</em></huge><br>
         <p></p>
         <p></p>
