--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@
       </p>
            <li> IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), Reviewer </li>
            <li> International Journal of Computer Vision (IJCV), Reviewer </li>
+           <li> IEEE Transactions on Image Processing (TIP), Reviewer</li>
           <li> IEEE Transactions on Industrial Informatics (TII), Reviewer </li>
            <li> IEEE Transactions on Affective Computing (TAC), Reviewer </li>
           <li> IEEE Journal of Biomedical and Health Informatics (JBHI), Reviewer </li>
