--- a/index.html
+++ b/index.html
@@ -525,9 +525,13 @@
 
 <tbody><tr>
         <td width="100%" valign="middle">
-          <h2>Selective Awards &amp; Honors</h2>
+          <h2>Selective Projects &amp; Awards &amp; Honors </h2>
           <div style="line-height:25px">
           <p></p>
+          <li> <stronghuge><STRONG><u>Project Lead</u> of "<EM>AI for Skeleton-Based Person Re-Identification</EM>"</STRONG> funded by the <EM>National Research Foundation, Singapore under its AI Singapore (AISG) Programme </EM>
+            <li> <stronghuge><STRONG><u>Participator</u> of a research project</STRONG> funded by the <EM>Alibaba-NTU Singapore Joint Research Institute (JRI) </EM> 
+              <br>
+              <br>
               <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
               <li> <STRONG>Outstanding Reviewer</STRONG> of IJCAI (Top 3% Reviewer), 2022<br></li>
               <li> <stronghuge><STRONG>Distinguished PC Member</STRONG> of IJCAI, 2022</stronghuge><br></li>
@@ -537,10 +541,10 @@
               <li> <stronghuge><STRONG>IEEE Healthcom Best Paper Award</STRONG>, 2020</stronghuge><br></li>
               <li> <stronghuge><STRONG>Outstanding Undergraduate Thesis Award</STRONG> of SCUT, 2019</stronghuge> <br></li>
               <li> <stronghuge><STRONG>National Scholarship</STRONG>, Ministry of Education of China, 2018 </stronghuge><br></li>
-              <li> <stronghuge><STRONG>2nd Place</STRONG> in South China Hackathon of Microsoft, 2018 </stronghuge><br></li>
-              <li> <stronghuge><STRONG>1st Place</STRONG> in Wenshi Software Design Contest of SCUT, 2018</stronghuge><br></li>
-              <li> <stronghuge><STRONG>Outstanding Student Association</STRONG> (Leadership) of SCUT SSE, 2017</stronghuge><br></li>
-              <li> <stronghuge><STRONG>1st Prize</STRONG> in Creative Programming Design Contest of SCUT SSE, 2016</stronghuge><br></li>
+              <li> <stronghuge><STRONG>2nd Place (Leader)</STRONG> in South China Hackathon of Microsoft, 2018 </stronghuge><br></li>
+              <li> <stronghuge><STRONG>1st Place (Leader)</STRONG> in Wenshi Software Design Contest of SCUT, 2018</stronghuge><br></li>
+              <li> <stronghuge><STRONG>Outstanding Student Association</STRONG> (Leader) of SCUT SSE, 2017</stronghuge><br></li>
+              <li> <stronghuge><STRONG>1st Prize (Leader)</STRONG> in Creative Programming Design Contest of SCUT SSE, 2016</stronghuge><br></li>
               <p></p>
           </li></div>
         </td>
@@ -581,7 +585,7 @@
         <img src="./images/SCSE_GSC_LOGO.png" width="200" height="200">
       </td>
       <td valign="top" width="75%">
-          <stronghuge><STRONG>NTU CCDS (SCSE) Graduate Student Club (2022 - 2024)</STRONG></stronghuge> <br>
+          <stronghuge><STRONG>NTU CCDS (SCSE) Graduate Student Club (2021 - 2024)</STRONG></stronghuge> <br>
         <huge><em>Director of Publicity Committee & Member of Academic Committee</em></huge><br>
         <p></p>
         <p></p>
