--- a/index.html
+++ b/index.html
@@ -528,8 +528,17 @@
           <h2>Selective Projects &amp; Awards &amp; Honors </h2>
           <div style="line-height:25px">
           <p></p>
-          <li> <stronghuge><STRONG><u>Project Lead</u> of "<EM>AI for Skeleton-Based Person Re-Identification</EM>"</STRONG> funded by the <EM>National Research Foundation, Singapore under its AI Singapore (AISG) Programme </EM>
-            <li> <stronghuge><STRONG><u>Participator</u> of a research project</STRONG> funded by the <EM>Alibaba-NTU Singapore Joint Research Institute (JRI) </EM> 
+          <li> <stronghuge><STRONG><u>Project Lead</u></STRONG> of AI Singapore PhD Research Project (of National Research Foundation, Singapore) (2022 to 2025): <EM>“Research and Application of AI for Skeleton-Based Person Re-Identification”</EM></li>
+            <li> <stronghuge><STRONG><u>Participator</u></STRONG> of the National Science and Technology Innovation Project (2018 to 2020): <EM>“Research and Development of Non-Invasive Gait * System”.</EM></li>
+              <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Shenzhen Sustainable Development of Science and Technology Project (2021 to 2023): <EM>“Clinical Application and Research on Gait and Multi-Modal Analysis Based Elderly Fall and Protection System”.</EM></li>
+                <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Alibaba-NTU Joint Research Institute Project (2022 to 2025)</li>
+              <br>
+              The developed 4D Depth Video Based Gait Recognition & Emotion Prediction System and the Swarm Intelligence Computing and Multi-Sensor Based Sleep Monitoring System 
+              have been applied to various universities and
+              hospitals with more than 10,000 clinical experiments, including: 
+              State Key Laboratory of Cognitive Neuroscience and Learning of Beijing Normal University, Peking University Sixth Hospital, 
+              the Second Xiangya Hospital, Shenzhen People’s Hospital, etc.
+              <br>
               <br>
               <br>
               <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
@@ -554,14 +563,14 @@
 
 <tbody><tr>
         <td width="100%" valign="middle">
-          <h2>Invited Talks and Presentations</h2>
+          <h2>Invited Talks</h2>
           <div style="line-height:25px">
           <p></p>
-          <li> <stronghuge><STRONG>"Global Young Scholars' Forum"</STRONG>, Invited Presentation by <EM>Double First-Classs & Project 985 Universities</EM>, China, 2024 <br></li>
-            <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/">the National AI Stragtegy 2.0</a>"</STRONG>, Invited Discussion by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore, 2024 <br></li>
+          <li> <stronghuge><STRONG>"Pioneering AI Innovations in Skeleton-Based Person Re-Identification"</STRONG>, Invited by <EM>Institute of Artificial Intelligence, Xiamen University, </EM>, China, 2024 <br></li>
+            <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/">the National AI Stragtegy 2.0</a>"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore, 2024 <br></li>
               <li> <stronghuge><STRONG>"Skeleton Prototype Contrastive Learning with Multi-Level Graph Relation Modeling for Unsupervised Person Re-Identification"</STRONG>, 
-                              Invited Presentation by <EM>International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</EM>, 2023</stronghuge><br></li>
-              <li> <stronghuge><STRONG>"Insights from Top-Conference Research"</STRONG>, Invited Talk by <EM>Southern University of Science and Technology (SUSTech, iMED) </EM>, China, 2021</stronghuge><br></li>
+                              Invited by <EM>International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</EM>, 2023</stronghuge><br></li>
+              <li> <stronghuge><STRONG>"Insights from Top-Conference Research"</STRONG>, Invited by <EM>the Department of Computer Science and Engineering, Southern University of Science and Technology</EM>, China, 2021</stronghuge><br></li>
               <p></p>
           </li></div>
         </td>
@@ -648,7 +657,7 @@
 
 </table>
 <!--<a href="https://clustrmaps.com/site/1bzxq" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=n&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg" /></a>-->
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353"></script>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg'></script>
 </div>
 
 <div id="footer">
