--- a/index.html
+++ b/index.html
@@ -493,6 +493,17 @@
       <div style="line-height:25px">
       <p>
       </p>
+      <li> Editorial Board Member of Frontiers in Computational Neurosciencer</li>
+      <li> Program Committee (PC) Member of <EM>IJCAI</EM> 2022, 2023, 2024 <br></li>
+      <li> Co-Organizer and PC Member of
+          <a href="https://ijcai-aiaa-2024.org/">the 4th AI for Ageless Aging Workshop</a> @<EM>IJCAI 2024</EM><br></li>
+      <li> Co-Organizer and PC Member of
+          <a href="https://zxjwudi.github.io/aiaa2023.github.io/">the 3rd AI for Ageless Aging Workshop</a> @<EM>IJCAI 2023</EM><br></li>
+      <li> Organizing Team Member of
+          <a href="http://iccse2023.crowdscience.org/">the 6th International Conference on Crowd Science and Engineering</a> @<EM>ICCSE 2023</EM><br></li>
+      <li> Co-Host, Co-Organizer, and PC Member of
+          <a href="https://zxjwudi.github.io/aif2022.github.io/">the 2nd AI for Cognitive and Physical Frailty Seminar</a> @<EM>IJCAI 2022</EM><br></li>
+          <br>
            <li> IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), Reviewer </li>
            <li> International Journal of Computer Vision (IJCV), Reviewer </li>
            <li> IEEE Transactions on Image Processing (TIP), Reviewer</li>
@@ -502,16 +513,6 @@
            <li> IEEE Transactions on Multimedia (TMM), Reviewer </li>
            <li> Artificial Intelligence Review, Reviewer </li>
            <li> Expert Systems with Applications, Reviewer </li>
-           <li> Frontiers in Computational Neuroscience, Editorial Board Member</li>
-          <li> PC Member of <EM>IJCAI</EM>, 2022, 2023, 2024 <br></li>
-          <li> Co-Organizer and PC Member of
-              <a href="https://ijcai-aiaa-2024.org/">the 4th AI for Ageless Aging Workshop</a> @<EM>IJCAI 2024</EM><br></li>
-          <li> Co-Organizer and PC Member of
-              <a href="https://zxjwudi.github.io/aiaa2023.github.io/">the 3rd AI for Ageless Aging Workshop</a> @<EM>IJCAI 2023</EM><br></li>
-          <li> Organizing Team Member of
-              <a href="http://iccse2023.crowdscience.org/">the 6th International Conference on Crowd Science and Engineering</a> @<EM>ICCSE 2023</EM><br></li>
-          <li> Co-Host, Co-Organizer, and PC Member of
-              <a href="https://zxjwudi.github.io/aif2022.github.io/">the 2nd AI for Cognitive and Physical Frailty Seminar</a> @<EM>IJCAI 2022</EM><br></li>
 <!--          <li> "xxx", AI Time, 2021.10 &nbsp;<a href="https://www.bilibili.com/video/BV1qP4y1b7us?spm_id_from=333.999.0.0">[Video]</a><br></li>-->
           <br>
           <li> CZ3004 Multi-disciplinary Design Project, Teaching Assistant, NTU, 2022 Fall </li>
@@ -538,7 +539,6 @@
               hospitals with more than 10,000 clinical experiments, including: 
               State Key Laboratory of Cognitive Neuroscience and Learning of Beijing Normal University, Peking University Sixth Hospital, 
               the Second Xiangya Hospital, Shenzhen People’s Hospital, etc.
-              <br>
               <br>
               <br>
               <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
