--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <section id="wenjie-yin" class="intro-text">
 <h1>Haocong Rao</h1>
     <p><strong>PhD Candidate, AISG PhD Fellow</strong></p>
-    <p><strong>LILY Research Centre, Nanyang Technological University</strong></p>
+    <p><strong>College of Computing and Data Science, Nanyang Technological University</strong></p>
 
 <div class="intro-contact">
 <table>
@@ -99,7 +99,7 @@
 <h2 id="about-me">About me</h2>
 <p>
  I am Haocong Rao (饶浩聪), a final-year PhD candidate supported by
-   <a href="https://aisingapore.org/research/phd-fellowship-programme/">AI Singapore (AISG) PhD Fellowship</a> and supervised by <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Prof. Chunyan</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/">Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>),
+   <a href="https://aisingapore.org/research/phd-fellowship-programme/">AI Singapore (AISG) PhD Fellowship</a> and supervised by <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Prof. Chunyan Miao</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/">Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>),
     at the <a href="https://www.ntu.edu.sg/lily">LILY Research Centre</a> and College of Computing and Data Science (CCDS), Nanyang Technological University (NTU), Singapore.
     My broad research interests include Skeleton-Based Person Re-Identification (SRID), 3D Signal Processing, Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, LLMs Application, AI for Healthcare).
 </p>
