--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <section id="wenjie-yin" class="intro-text">
 <h1>Haocong Rao</h1>
     <p><strong>PhD Candidate, AISG PhD Fellow</strong></p>
-    <p><strong>College of Computing and Data Science, Nanyang Technological University</strong></p>
+    <p><strong>CCDS, NTU</strong></p>
 
 <div class="intro-contact">
 <table>
