--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@
       <li> Co-Host, Co-Organizer, and PC Member of
           <a href="https://zxjwudi.github.io/aif2022.github.io/">the 2nd AI for Cognitive and Physical Frailty Seminar</a> @<EM>IJCAI 2022</EM><br></li>
           <br>
+          <li> Nature Communications, Reviewer </li>
            <li> IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), Reviewer </li>
            <li> International Journal of Computer Vision (IJCV), Reviewer </li>
            <li> IEEE Transactions on Image Processing (TIP), Reviewer</li>
