--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
           <h2>Invited Talks</h2>
           <div style="line-height:25px">
           <p></p>
-              <li> <stronghuge><STRONG>"Advancing Skeleton-Based AI Innovations in Person Re-Identification and Beyond"</STRONG>, Invited by <EM> Information Hub - Artificial Intelligence, The Hong Kong University of Science and Technology (Guangzhou) </EM>, China, 2024 <br></li>
+              <li> <stronghuge><STRONG>"Advancing Skeleton-Based AI Innovations in Person Re-Identification and Beyond"</STRONG>, Invited by <EM> Information Hub - Artificial Intelligence, the Hong Kong University of Science and Technology (Guangzhou) </EM>, China, 2024 <br></li>
               <li> <stronghuge><STRONG>"Pioneering AI Innovations in Skeleton-Based Person Re-Identification"</STRONG>, Invited by <EM>Institute of Artificial Intelligence, Xiamen University</EM>, China, 2024 <br></li>
             <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/">the National AI Stragtegy 2.0</a>"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore, 2024 <br></li>
               <li> <stronghuge><STRONG>"Skeleton Prototype Contrastive Learning with Multi-Level Graph Relation Modeling for Unsupervised Person Re-Identification"</STRONG>, 
