--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
 <h2 id="about-me">About me</h2>
 <p>
  I am Haocong Rao (饶浩聪), a final-year PhD candidate supported by
-   <a href="https://aisingapore.org/research/phd-fellowship-programme/">AI Singapore (AISG) PhD Fellowship</a> and supervised by <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Prof. Chunyan Miao</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/">Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>),
-    at the <a href="https://www.ntu.edu.sg/lily">LILY Research Centre</a> and College of Computing and Data Science (CCDS), Nanyang Technological University (NTU), Singapore.
+   <a href="https://aisingapore.org/research/phd-fellowship-programme/" target=“_blank”>AI Singapore (AISG) PhD Fellowship</a> and supervised by <a href="https://dr.ntu.edu.sg/cris/rp/rp00084" target=“_blank”>Prof. Chunyan Miao</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/" target=“_blank”>Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>),
+    at the <a href="https://www.ntu.edu.sg/lily" target=“_blank”>LILY Research Centre</a> and College of Computing and Data Science (CCDS), Nanyang Technological University (NTU), Singapore.
     My broad research interests include Skeleton-Based Person Re-Identification (SRID), 3D Signal Processing, Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, LLMs Application, AI for Healthcare).
 </p>
 
 <p>
       Prior to joining NTU, I was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science,
-      where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm">Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm">Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN">Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/">Prof. Victor C.M. Leung</a> (<em>FIEEE, FRSC, FEIC, FCAE</em>).
+      where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm" target=“_blank”>Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm" target=“_blank”>Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN" target=“_blank”>Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/" target=“_blank”>Prof. Victor C.M. Leung</a> (<em>FIEEE, FRSC, FEIC, FCAE</em>).
       I obtained my B.Eng. degree with Outstanding Thesis Award from South China University of Technology (SCUT).
 </p>
 <!--      <em><stronghuge><font color="#a82e2e">I am on the 2024-2025 academic job market. </font></stronghuge></em> <br>-->
@@ -118,9 +118,9 @@
          <li> <strongsmall>[2024/05]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper
             "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is released!</smalll><br></li>
           <li> <strongsmall>[2024/03]</strongsmall> &nbsp;&nbsp;<smalll>We are organizing the
-              <EM><a href="https://ijcai-aiaa-2024.org/">The 4th AI for Ageless Aging Workshop (AIAA) workshop</a></EM>,
+              <EM><a href="https://ijcai-aiaa-2024.org/" target=“_blank”>The 4th AI for Ageless Aging Workshop (AIAA) workshop</a></EM>,
            conjunction with
-              <EM><a href="https://ijcai24.org/">IJCAI 2024</a></EM>, now calling for papers!
+              <EM><a href="https://ijcai24.org/" target=“_blank”>IJCAI 2024</a></EM>, now calling for papers!
          </smalll><br></li>
             <li> <strongsmall>[2024/01]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper "A Survey on 3D Skeleton Based Person Re-Identification: Approaches, Designs,
                 Challenges, and Future Directions" is released!</smalll><br></li>
@@ -568,9 +568,9 @@
           <h2>Invited Talks</h2>
           <div style="line-height:25px">
           <p></p>
-              <li> <stronghuge><STRONG><a href="https://youtu.be/1QcU5oobJxM?si=eFTmGs7nPn6ilcK2">"Advancing Skeleton-Based AI Innovations in Person Re-Identification and Beyond"</STRONG></a>, Invited by <EM> Information Hub - Artificial Intelligence, the Hong Kong University of Science and Technology (Guangzhou) </EM>, China, 2024 <br></li>
+              <li> <stronghuge><STRONG><a href="https://youtu.be/1QcU5oobJxM?si=eFTmGs7nPn6ilcK2" target=“_blank”>"Advancing Skeleton-Based AI Innovations in Person Re-Identification and Beyond"</STRONG></a>, Invited by <EM> Information Hub - Artificial Intelligence, the Hong Kong University of Science and Technology (Guangzhou) </EM>, China, 2024 <br></li>
               <li> <stronghuge><STRONG>"Pioneering AI Innovations in Skeleton-Based Person Re-Identification"</STRONG>, Invited by <EM>Institute of Artificial Intelligence, Xiamen University</EM>, China, 2024 <br></li>
-            <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/">the National AI Stragtegy 2.0</a>"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore, 2024 <br></li>
+            <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/" target=“_blank”>the National AI Stragtegy 2.0</a>"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore, 2024 <br></li>
               <li> <stronghuge><STRONG>"Skeleton Prototype Contrastive Learning with Multi-Level Graph Relation Modeling for Unsupervised Person Re-Identification"</STRONG>, 
                               Invited by <EM>International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</EM>, 2023</stronghuge><br></li>
               <li> <stronghuge><STRONG>"Insights from Top-Conference Research"</STRONG>, Invited by <EM>the Department of Computer Science and Engineering, Southern University of Science and Technology</EM>, China, 2021</stronghuge><br></li>
@@ -665,7 +665,7 @@
 
 <div id="footer">
   <div class="container">
-      <div class="foot-madeby">The template is shared by <a href="https://zxjwudi.github.io/xuejiaozhao/"> Dr. Xuejiao Zhao.</a> Last update: 21 June 2024.</div>
+      <div class="foot-madeby">The template is shared by <a href="https://zxjwudi.github.io/xuejiaozhao/" target=“_blank”> Dr. Xuejiao Zhao.</a> Last update: 21 June 2024.</div>
   </div>
 </div>
 
