--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
+          <li> <strongsmall>[2025/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>AAAI 2025</em>!</smalll><br></li>
          <li> <strongsmall>[2024/05]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper
             "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is released!</smalll><br></li>
           <li> <strongsmall>[2024/03]</strongsmall> &nbsp;&nbsp;<smalll>We are organizing the
