--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
-          <li> <strongsmall>[2025/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>AAAI 2025</em>!</smalll><br></li>
+          <li> <strongsmall>[2025/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>AAAI 2025</u></em>!</smalll><br></li>
          <li> <strongsmall>[2024/05]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper
             "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is released!</smalll><br></li>
           <li> <strongsmall>[2024/03]</strongsmall> &nbsp;&nbsp;<smalll>We are organizing the
@@ -125,28 +125,28 @@
          </smalll><br></li>
             <li> <strongsmall>[2024/01]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper "A Survey on 3D Skeleton Based Person Re-Identification: Approaches, Designs,
                 Challenges, and Future Directions" is released!</smalll><br></li>
-            <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper (LLMs for Psychology) is accepted by <em>Findings of EMNLP 2023</em>!</smalll><br></li>
+            <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper (LLMs for Psychology) is accepted by <em>Findings of <u>EMNLP 2023</u></em>!</smalll><br></li>
             <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Outstanding Contribution Award</strong> of <em>European Alliance for Innovation
 (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</em>.</smalll><br></li>
-            <li> <strongsmall>[2023/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>International Journal of Computer Vision (IJCV) [IF: 19.5]</em>!</smalll><br></li>
+            <li> <strongsmall>[2023/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>International Journal of Computer Vision (IJCV)</u> [IF: 19.5]</em>!</smalll><br></li>
             <li> <strongsmall>[2023/03]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI [IF: 24.3]</em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is recognized as <em><strong style="color: red;">ESI Highly Cited Paper</strong></em>!</smalll><br></li>
-            <li> <strongsmall>[2023/02]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>CVPR 2023</em>!</smalll><br></li>
+            <li> <strongsmall>[2023/02]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>CVPR 2023</u></em>!</smalll><br></li>
 <!--            <li> <strongsmall>[2022/12]</strongsmall> &nbsp;&nbsp;<smalll>Invited to serve as a Program Committee member of <em>IJCAI 2023</em>!</smalll><br></li>-->
-            <li> <strongsmall>[2022/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Signal Processing Letters [IF: 3.9]</em>!</smalll><br></li>
+            <li> <strongsmall>[2022/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Signal Processing Letters</u> [IF: 3.9]</em>!</smalll><br></li>
           <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI </em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is selected as <em><strong style="color: red;">Featured Article (2022 October Issue) of TPAMI</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Recognized as <strong>Top Reviewer (3%)</strong> and <strong>Distinguished Program Committee (PC) Member</strong> of <em>IJCAI! </em> </smalll><br></li>
-          <li> <strongsmall>[2022/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IJCAI 2022 (Oral)</em>!</smalll><br></li>
+          <li> <strongsmall>[2022/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IJCAI 2022</u> (Oral)</em>!</smalll><br></li>
             <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <em><strong style="color: red;">AI Singapore (AISG) PhD Fellowship</strong> (Top PhD Scholarship in Singapore)</em>!</smalll><br></li>
-            <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Transactions on Multimedia (TMM) [IF: 8.2]</em>!</smalll><br></li>
-          <li> <strongsmall>[2021/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>ACMMM 2021</em>!</smalll><br></li>
-            <li> <strongsmall>[2021/06]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) [IF: 24.3]</em>!</smalll><br></li>
-          <li> <strongsmall>[2021/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IJCAI 2021 (Oral)</em>!</smalll><br></li>
-                        <li> <strongsmall>[2021/03]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Internet of Things Journal (IoTJ) [IF: 10.2]</em>!</smalll><br></li>
-            <li> <strongsmall>[2021/03]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>Information Sciences [IF: 8.5]</em>!</smalll><br></li>
+            <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Transactions on Multimedia (TMM)</u> [IF: 8.2]</em>!</smalll><br></li>
+          <li> <strongsmall>[2021/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>ACMMM 2021</u></em>!</smalll><br></li>
+            <li> <strongsmall>[2021/06]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</u> [IF: 24.3]</em>!</smalll><br></li>
+          <li> <strongsmall>[2021/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IJCAI 2021</u> (Oral)</em>!</smalll><br></li>
+                        <li> <strongsmall>[2021/03]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Internet of Things Journal (IoTJ)</u> [IF: 10.2]</em>!</smalll><br></li>
+            <li> <strongsmall>[2021/03]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>Information Sciences</u> [IF: 8.5]</em>!</smalll><br></li>
             <li> <strongsmall>[2020/12]</strongsmall> &nbsp;&nbsp;<smalll>Our paper "Multi-level Co-Occurrence Graph Convolutional LSTM for Skeleton-Based Action Recognition" received <strong>2020 IEEE Healthcom Best Paper Award</strong> at <em>IEEE International Conference on E-health Networking, Application & Service</em>!</smalll><br></li>
-            <li> <strongsmall>[2020/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Internet of Things Journal (IoTJ) [IF: 9.5]</em>!</smalll><br></li>
+            <li> <strongsmall>[2020/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IEEE Internet of Things Journal (IoTJ)</u> [IF: 9.5]</em>!</smalll><br></li>
             <li> <strongsmall>[2020/10]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Dean's Research Excellence Scholarship (Special Award)</strong> at Shenzhen Institute of Advanced Technology, Chinese Academy of Sciences (SIAT)!</smalll><br></li>
-            <li> <strongsmall>[2020/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IJCAI 2020 (Oral)</em>!</smalll><br></li>
+            <li> <strongsmall>[2020/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>IJCAI 2020</u> (Oral)</em>!</smalll><br></li>
           <p></p>
         </li></td>
       </tr>
