--- a/index.html
+++ b/index.html
@@ -163,6 +163,49 @@
 </tbody>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+  <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
+      <tr><td align="center" width="25%">
+        <img src="./images/Locality_Awareness_overview.png" width="190" height="110">
+      </td>
+      <td valign="top" width="75%">
+	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
+	 By <strong><u>Haocong Rao</u>*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
+     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 [IF: 24.3] (Extension of IJCAI 2020 Paper)
+     </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Article, ESI Highly Cited Paper)</font></strong></EM><br>
+		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
+          <a href="https://drive.google.com/file/d/1uIu2QmKYt68YSenPmuBAFBULpH2mekpC/view?usp=drive_link">[PDF]</a>
+         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Code]</a>
+         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Data]</a>
+<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Zf_RPTCA-UkJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGb7_I:AFWwaeYAAAAAZmGd9_K5yy7DCUVHzLBBucNgIWo&scisig=AFWwaeYAAAAAZmGd94QF2WKAWRr4n7mOyQsb_PQ&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
+          <br>
+        <p></p>
+      </td>
+    </tr>
+   </tbody></table>
+
+
+   <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+    <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
+        <tr><td align="center" width="25%">
+          <img src="./images/MoCos_overview.png" width="190" height="110">
+        </td>
+        <td valign="top" width="75%">
+     <strong>Motif Guided Graph Transformer with Combinatorial Skeleton Prototype Learning for Skeleton-Based Person Re-Identification</strong><br>
+     By <strong><u>Haocong Rao</u></strong>,
+     <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
+        <em>39th Annual AAAI Conference on Artificial Intelligence, <strong>AAAI 2025</strong></em> <font color="#6495ed">[First SRID Paper in AAAI]</font><br>
+      <a href="https://arxiv.org/abs/2412.09044">[Link]</a>
+          <a href="https://arxiv.org/pdf/2412.09044">[PDF]</a>
+            <a href="https://github.com/Kali-Hac/MoCos">[Code]</a>
+            <a href="https://github.com/Kali-Hac/MoCos">[Data]</a>
+            <br>
+          <p></p>
+        </td>
+      </tr>
+    </tbody></table>
+
+
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
       <td align="center" width="25%">
         <img src="./images/AI4NDD_overview.png" width="190" height="130">
@@ -174,7 +217,7 @@
           <a href="https://scholar.google.com/citations?user=gcXa1o8AAAAJ&hl=en">Xuejiao Zhao</a>,
        <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
 
-	 <em>Arxiv Preprint</em><br>
+	 <em>Arxiv Preprint, 2024</em><br>
      <a href="https://arxiv.org/abs/2405.13082">[Link]</a>
           <a href="https://arxiv.org/pdf/2405.13082">[PDF]</a>
      <a href="https://github.com/Kali-Hac/AI4NDD-Survey">[Resources]</a>
@@ -194,7 +237,7 @@
        By <strong><u>Haocong Rao</a></u></strong>,
        <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
 
-          <em>Arxiv Preprint</em><font color="#6495ed"> [First SRID Survey]</font><br>
+          <em>Arxiv Preprint, 2024</em><font color="#6495ed"> [First SRID Survey]</font><br>
      <a href="https://arxiv.org/abs/2401.15296">[Link]</a>
            <a href="https://arxiv.org/pdf/2401.15296">[PDF]</a>
      <a href="https://github.com/Kali-Hac/3D-skeleton-based-person-re-ID-survey">[Resources]</a>
@@ -350,26 +393,6 @@
     </tr>
    </tbody></table>
 
- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-  <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
-      <tr><td align="center" width="25%">
-        <img src="./images/Locality_Awareness_overview.png" width="190" height="110">
-      </td>
-      <td valign="top" width="75%">
-	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
-	 By <strong><u>Haocong Rao</u>*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
-     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 [IF: 24.3] (Extension of IJCAI 2020 Paper)
-     </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Article, ESI Highly Cited Paper)</font></strong></EM><br>
-		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
-          <a href="https://drive.google.com/file/d/1uIu2QmKYt68YSenPmuBAFBULpH2mekpC/view?usp=drive_link">[PDF]</a>
-         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Code]</a>
-         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Data]</a>
-<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Zf_RPTCA-UkJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGb7_I:AFWwaeYAAAAAZmGd9_K5yy7DCUVHzLBBucNgIWo&scisig=AFWwaeYAAAAAZmGd94QF2WKAWRr4n7mOyQsb_PQ&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
-          <br>
-        <p></p>
-      </td>
-    </tr>
-   </tbody></table>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
   <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
